--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,7 @@
             "previewLimit": 50,
             "driver": "SQLite",
             "name": "dados",
-            "database": "${workspaceFolder:projeto-biblioteca}/dados.db"
+            "database": "${workspaceFolder:Ciencia-De-Dados-EFG}/Desenvolvimento-de-Sistemas-para-Dados-EFG-2025/projeto-biblioteca/dados.db"
         }
-    ],
-    "sqltools.useNodeRuntime": true
+    ]
 }
